# simpleflagsecure

./: CMakeLists.txt  README.md  build.sh  customize.sh  module.prop  post-fs-data.sh
system/framework/services.jar.out/: apktool.yml
system/framework/services.jar.out/smali/: LZMADecDemo.smali  LZMAEncDemo.smali  TestAllocSpeed.smali  XZDecDemo.smali  XZEncDemo.smali  XZSeekDecDemo.smali  XZSeekEncDemo.smali
system/framework/services.jar.out/smali/android/adpf/: ISessionManager$Default.smali  ISessionManager$Stub$Proxy.smali  ISessionManager$Stub.smali  ISessionManager.smali
system/framework/services.jar.out/smali/android/gsi/: AvbPublicKey$1.smali  AvbPublicKey.smali  GsiProgress$1.smali  GsiProgress.smali  IGsiService$Default.smali  IGsiService$Stub$Proxy.smali  IGsiService$Stub.smali  IGsiServiceCallback$Default.smali  IGsiServiceCallback$Stub$Proxy.smali  IGsiServiceCallback$Stub.smali  IImageService$Default.smali  IImageService$Stub$Proxy.smali  IImageService$Stub.smali  IProgressCallback$Default.smali  IProgressCallback$Stub$Proxy.smali  IProgressCallback$Stub.smali  MappedImage$1.smali  MappedImage.smali
system/framework/services.jar.out/smali/android/net/: ConnectivityModuleConnector$DependenciesImpl.smali  ConnectivityModuleConnector$ModuleServiceConnection.smali  ConnectivityModuleConnector-IA.smali  ConnectivityModuleConnector.smali  DataStallReportParcelable$1.smali  DataStallReportParcelable.smali  DhcpResultsParcelable$1.smali  DhcpResultsParcelable.smali  IIpMemoryStore$Default.smali  IIpMemoryStore$Stub$Proxy.smali  (+123 more)
zygisk/src/: main.cpp
(+11757 files in other folders)
